<resources>
    <string name="app_name">VPNoverSSH</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Preference Titles -->
    <string name="vpn_header">VPN Preferences</string>
    <string name="vpn_description">Configures what traffic goes into the tunnel</string>
    <string name="ssh_header">SSH Preferences</string>
    <string name="ssh_description">Configures how your device connects to the server</string>

    <!-- VPN Preferences -->
    <string name="dns_title">DNS Resolver IP</string>
    <string name="dns_ip_description">Use a custom DNS server. Leave empty to use defaults. Warning! DNS queries will always bypass VPN.</string>
    <string name="apps_title">Included Apps</string>
    <string name="apps_description">Choose which apps will use the tunnel and which will connect directly. By default, all apps are included in the tunnel</string>
    <string name="hide_system_apps_title">Hide system apps</string>
    <string name="hide_system_apps_description">Only show launchable apps in the Included Apps list, and hide preinstalled system ones. Already-selected apps are always shown</string>
    <string name="remote_dns_title">Remote DNS</string>
    <string name="remote_dns_description">Resolve domain names on the proxy server side instead of locally (fake IP mode). DNS queries are answered locally from a fake IP pool, and connections are forwarded to the SOCKS5 server by domain name. The DNS Resolver IP above is ignored. Requires the remote DNS tun2socks build (see .github/workflows/build-tun2socks-aar.yml).</string>


    <!-- SSH Preferences -->
    <string name="forwarder_port_title">Forwarder port</string>
    <string name="forwarder_port_description">Manually assign a port for SSH forwarder. Port will be assigned automatically if empty:</string>

</resources>